--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,13 @@ services:
       - "5000:5000"
     volumes:
       - ./mlruns:/app/mlruns
-      - ./models:/app/models
+      - ./mlartifacts:/app/mlartifacts
     working_dir: /app
     command: >
       sh -c "
         pip install mlflow==3.3.2 &&
         mlflow ui --host 0.0.0.0 --port 5000
       "
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
 
   model-api:
     build: .
@@ -29,14 +23,4 @@ services:
       - MLFLOW_TRACKING_URI=http://mlflow:5000
     restart: unless-stopped
 
-  tests:
-    build: .
-    depends_on:
-      - model-api
-    volumes:
-      - ./test_api.py:/app/test_api.py
-    environment:
-      - API_BASE_URL=http://model-api:8000
-    command: python test_api.py
-    profiles:
-      - test 
+ 
